--- a/DungeonInventoryManager/requirements4CPU.txt
+++ b/DungeonInventoryManager/requirements4CPU.txt
@@ -1,17 +1,45 @@
-#note: This file is for CPU-only installations of the Dungeon Inventory Manager.
-#you simply have to avtivate your virtual environment and run:
-#pip install -r requirements4CPU.txt
-#BUT: for the most cases the CPU version is not recommended, as it is very slow.
+# INSTALL INSTRUCTIONS:
+# 1. Create fresh venv: python -m venv myenv
+# 2. Activate: source myenv/bin/activate (or myenv\Scripts\activate on Windows)
+# 3. Install PyTorch first: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+# 4. Then install other requirements: pip install -r requirements_fixed.txt
 
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-pydantic==1.10.9
-torch==2.2.2
-diffusers[torch]    
-huggingface_hub == 0.32.4
-transformers==4.33.1 
-scipy==1.11.2
-ftfy==6.1.1
-Pillow==10.0.0
-accelerate==0.21.0
-safetensors==0.3.3
+# Core API framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+
+# Data validation and serialization
+pydantic>=2.0.0
+
+# Deep learning and AI - Install PyTorch separately first!
+# torch (install separately)
+# torchvision (install separately) 
+# torchaudio (install separately)
+
+# Diffusers with specific version that works better with CPU
+diffusers>=0.24.0
+transformers>=4.35.0
+
+# Image processing
+Pillow>=10.0.0
+
+# Hugging Face Hub
+huggingface_hub>=0.17.0
+
+# Array processing
+numpy>=1.24.0,<2.0.0
+
+# HTTP client
+requests>=2.31.0
+
+# Memory optimization (optional, may not work on all systems)
+# xformers>=0.0.22
+
+# Accelerated inference
+accelerate>=0.24.0
+
+# Model safetensors support
+safetensors>=0.4.0
+
+# Better logging
+rich>=13.0.0
