--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,20 @@
 {
+    
     "java.project.sourcePaths": [
         "DungeonInventoryManager\\DIM\\src"
     ],
     "java.project.referencedLibraries": [
-        "DungeonInventoryManager\\DIM\\lib\\jackson-annotations-2.15.2.jar",
-        "DungeonInventoryManager\\DIM\\lib\\jackson-core-2.15.2.jar",
-        "DungeonInventoryManager\\DIM\\lib\\jackson-databind-2.15.2.jar"
-    ]
+        " G:\\My Drive\\CODING\\JAVA\\Savitch\\Dungeon-Inventory-Manager\\DungeonInventoryManager\\DIM\\lib\\javafx-sdk-24.0.1\\lib\\*.jar"
+    ],
+    "java.configuration.runtimes": [
+    {
+      "name": "JavaSE-11",
+      "path": "C:\\Program Files\\Java\\jdk-11.0.2",
+      "default": true
+    },
+    {
+      "name": "JavaSE-1.8",
+      "path": "C:\\Program Files\\Java\\jdk1.8.0_xx"
+    }
+  ]
 }
